spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -411,29 +411,29 @@ header{
 }
 @media (min-width: 1200px){
  
-header{
+/*header{
    padding-top: 800px;
-    } 
+    } */
 header h1{
-    margin-top: -600px;
+    margin-top: -100px;
     }    
 }
 
 @media (min-width: 1400px){
-    header{
+    /*header{
         padding-top: 1000px;
-    }
+    }*/
     header h1{
-        margin-top:-800px;
+        margin-top:-100px;
     }
        
     }
 @media (min-width: 1600px){
-    header{
+   /* header{
         padding-top: 1200px;
-    }
+    }*/
     header h1{
-        margin-top: -900px;
+        margin-top: -100px;
     }
     
 }
